[gd_scene load_steps=6 format=3 uid="uid://b1ugpoiu1yxhi"]

[ext_resource type="Script" uid="uid://d2gvgywp2kmmb" path="res://decorate_menu.gd" id="1_2pxhd"]
[ext_resource type="Texture2D" uid="uid://dyi8exq5vc85k" path="res://assets/bed_tile.png" id="1_x4i3i"]
[ext_resource type="Texture2D" uid="uid://iv5ow3gwreef" path="res://assets/bookshelf.png" id="3_5g3bp"]
[ext_resource type="Theme" uid="uid://d0kqpuio6hw8v" path="res://assets/theme.tres" id="3_vcb5d"]
[ext_resource type="Texture2D" uid="uid://d01nav4jrsw8q" path="res://assets/sign.png" id="4_cd34k"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 498.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2pxhd")

[node name="colorRects" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="colorRects"]
offset_left = 16.0
offset_right = 502.0
offset_bottom = 600.0
color = Color(0.99846643, 0.9999998, 0.87695545, 1)

[node name="ColorRect2" type="ColorRect" parent="colorRects"]
offset_left = 26.0
offset_top = 12.0
offset_right = 174.0
offset_bottom = 207.0
color = Color(0.62582356, 0.72010916, 0.8052794, 1)

[node name="ColorRect3" type="ColorRect" parent="colorRects"]
offset_left = 185.0
offset_top = 12.0
offset_right = 333.0
offset_bottom = 208.0
color = Color(0.62582356, 0.72010916, 0.8052794, 1)

[node name="ColorRect4" type="ColorRect" parent="colorRects"]
offset_left = 344.0
offset_top = 13.0
offset_right = 492.0
offset_bottom = 79.0
color = Color(0.62582356, 0.72010916, 0.8052794, 1)

[node name="ColorRect5" type="ColorRect" parent="colorRects"]
offset_left = 26.0
offset_top = 212.0
offset_right = 174.0
offset_bottom = 408.0
color = Color(0.62582356, 0.72010916, 0.8052794, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 11.0
offset_right = 333.0
offset_bottom = 131.0

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer"]
position = Vector2(72, 58.5)
scale = Vector2(1.84375, 1.671875)
texture = ExtResource("1_x4i3i")

[node name="Sprite2D2" type="Sprite2D" parent="HBoxContainer"]
position = Vector2(238.49998, 64.25)
scale = Vector2(1.4843755, 1.203125)
texture = ExtResource("3_5g3bp")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 212.0
offset_right = 488.0
offset_bottom = 318.0

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer2"]
position = Vector2(76.50001, 61.5)
scale = Vector2(2.0156252, 1.7968749)
texture = ExtResource("4_cd34k")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 141.0
offset_right = 174.0
offset_bottom = 206.0
size_flags_horizontal = 3
theme = ExtResource("3_vcb5d")
text = "$800"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = 21.0
offset_right = 487.0
offset_bottom = 72.0
theme = ExtResource("3_vcb5d")
theme_override_font_sizes/normal_font_size = 25
text = "Coins: 0"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 97.0
offset_right = 491.0
offset_bottom = 161.0
theme = ExtResource("3_vcb5d")
text = "Exit Menu"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 185.0
offset_top = 140.0
offset_right = 333.0
offset_bottom = 207.0
theme = ExtResource("3_vcb5d")
text = "$1200"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 337.0
offset_right = 174.0
offset_bottom = 407.0
theme = ExtResource("3_vcb5d")
text = "$900"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
